finish input user

--- a/Easy Authen9DEC/Base.lproj/Main.storyboard
+++ b/Easy Authen9DEC/Base.lproj/Main.storyboard
@@ -52,6 +52,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="loginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VI6-8T-Om7"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9L-Mz-Vlj">
                                 <rect key="frame" x="111" y="529" width="153" height="67"/>
@@ -70,6 +73,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="displayTextField" destination="B9L-Mz-Vlj" id="rhL-so-PGM"/>
+                        <outlet property="passwordTextField" destination="7lr-XF-di9" id="EfJ-ME-a7F"/>
                         <outlet property="userTextField" destination="E5B-ey-0Hf" id="obm-Kw-XVw"/>
                     </connections>
                 </viewController>
